# CloudDriver

./: .gitignore  CMakeLists.txt  README.md  access_violation_fix.md  crash_fix_summary.md  debug_upload.md  lambda_callback_fix.md  memory_fix_summary.md  test_upload.md
assets/: 云安全云盘项目说明.md
cmake/: FindLibevent.cmake  FindOpenSSL.cmake
xcom/: CMakeLists.txt  Logger.h  xcom.h  xcom_task.cpp  xcom_task.h  xfile_server_task.cpp  xfile_server_task.h  xmsg.h  xtask.h  xthread.cpp  xthread.h  xthread_pool.cpp  xthread_pool.h  xtools.cpp  xtools.h
xdisk_gui/: CMakeLists.txt  XDownloadTask.cpp  XDownloadTask.h  XUploadTask.cpp  XUploadTask.h  main.cpp  widget.cpp  widget.h  widget.ui  xdir_task.cpp  xdir_task.h  xdisk_client.cpp  xdisk_client.h
xdisk_server/: CMakeLists.txt  README.md  main.cpp  xserver_task.cpp  xserver_task.h
